@@ -132,6 +132,7 @@ enum mosq_err_t {
 	MOSQ_ERR_SERVER_BUSY = 137,
 	MOSQ_ERR_BANNED = 138,
 	MOSQ_ERR_BAD_AUTHENTICATION_METHOD = 140,
+	MOSQ_ERR_SESSION_TAKEN_OVER = 142,
 	MOSQ_ERR_RECEIVE_MAXIMUM_EXCEEDED = 147,
 	MOSQ_ERR_TOPIC_ALIAS_INVALID = 148,
 	MOSQ_ERR_ADMINISTRATIVE_ACTION = 152,
