@@ -401,6 +401,9 @@ void do_disconnect(struct mosquitto *context, int reason)
 					case MOSQ_ERR_CONNECTION_RATE_EXCEEDED:
 						log__printf(NULL, MOSQ_LOG_NOTICE, "Client %s disconnected, connection rate exceeded.", id);
 						break;
+					case MOSQ_ERR_SESSION_TAKEN_OVER:
+						log__printf(NULL, MOSQ_LOG_NOTICE, "Client %s disconnected, session taken over.", id);
+						break;
 					default:
 						log__printf(NULL, MOSQ_LOG_NOTICE, "Bad socket read/write on client %s: %s", id, mosquitto_strerror(reason));
 						break;
